Add flow chart to implementation and add comma to background hardware

--- a/report/sections/02_background.tex
+++ b/report/sections/02_background.tex
@@ -14,7 +14,7 @@ The CoAP protocol defined in RFC7252 a lightweight and RESTful protocoll that ca
 
 \subsection{Hardware}
 
-Our target system for the security evaluation was an OpenMote Rev. A1\footnote{\url{www.openmote.com}} which mainly consists of a CC2538 SoC\footnote{\url{www.ti.com/product/CC2538}} running Contiki-NG~\cite{contiki}. As CoAP server implementation target, the Contiki-NG example implementation\footnote{\url{https://github.com/contiki-ng/contiki-ng/blob/develop/examples/coap/coap-example-server/coap-example-server.c}} was used.
+Our target system for the security evaluation was an OpenMote Rev. A1\footnote{\url{www.openmote.com}}, which mainly consists of a CC2538 SoC\footnote{\url{www.ti.com/product/CC2538}} running Contiki-NG~\cite{contiki}. As CoAP server implementation target, the Contiki-NG example implementation\footnote{\url{https://github.com/contiki-ng/contiki-ng/blob/develop/examples/coap/coap-example-server/coap-example-server.c}} was used.
 
 \subsection{Fuzzing}
 
