--- a/report/sections/01_introduction.tex
+++ b/report/sections/01_introduction.tex
@@ -12,10 +12,11 @@ Nowadays, already 8.4 billion connected things are part of the Internet of Thing
 
 In constrained environments, the conventional internet protocol stack can be hardly applied. Therefore most IoT devices run a protocol stack composed of especially designed low-power protocols for constrained environments. One such commonly used stack is composed of IPv6 over Low-Power Wireless Personal Area Networks (6LoWPAN), a low-power adaption of wireless IPv6, IPv6 Routing Protocol for Low-Power and Lossy Networks (RPL), a routing protocol for low-power and lossy networks and Constrained Application Protocol (CoAP), an application level protocol for constrained devices based on UDP. CoAP is not limited to run on these specific underlying protocols but since Contiki-NG uses this protocol stack, other protocol combinations will not be considered. Though all of the protocols can become potential attack vectors, we will subsequently focus on CoAP. 
 
-CoAP is known to be possibly vulnerable with respect to protocol parsing, URI processing, proxying and caching, risk of amplification, IP address spoofing and many more. Since some of these vulnerabilities are due to the underlying UDP, protocol parsing and URI processing are especially interesting when assessing CoAP security.
+CoAP was designed in order to enable constrained devices to perform internet communication without the need to perform high-overhead HTTP communication. Its simplicity and the multicast ability make CoAP very suitable for IoT networks.
+CoAP is known to be possibly vulnerable with respect to protocol parsing, URI processing, proxying and caching, risk of amplification, IP address spoofing and many more. Since some of these vulnerabilities are due to the underlying UDP, protocol parsing and URI processing are especially interesting when assessing CoAP security. Additionally to the inherent vulnerabilities of CoAP, the Contiki-NG implementation suffers from additional vulnerabilities. Low-level C implementations tend to cause unexpected memory leaks and the lack of additional security mechanisms such as AddressSanitizer make it hard to detect them a priori.
 
-Finding vulnerabilities in a software systems in conjunction with a hardware system is always a hard task and many methods such as manual testing or code review can only focus on one aspect of the system. Therefore fuzzing can help to find surprising vulnerabilities even in a black-box setting.
+Finding vulnerabilities in a software systems in conjunction with a hardware system is always a hard task and many methods such as manual testing or code review can only focus on one aspect of the system. Therefore fuzzing can help to find surprising vulnerabilities even in a black-box setting. It can be fully automated, run a security analysis with no runtime overhead and no or only little explicit expert knowledge about the system under test is needed.
 
-% TODO fuzzing techniques
+Our approach consists of an automatic setup phase of the IoT devices and the fuzzer and the actual fuzzing with logging of all send and received messages and debug output of the systems under test. A CoAP message is crafted using a CoAP message template and informed random field values. Subsequently, the message is send to a IoT border router that routes it to a IoT CoAP server. If needed, a response is transferred back and the request as well as the response are written to log files. Furthermore, all debug outputs of the border router and the CoAP server are saved as well. In order to check if fuzzing was successful and a crash occurred, a request to the standardized CoAP route \textit{/.well-known/core} that returns all available routes is performed and the response is compared to the expected value. If a variation or even no response can be detected, the fuzzing has been successful. The whole fuzzing workflow is automatically repeated until interrupted by the user.
 
 To the best of our knowledge, there is little to no work on CoAP fuzzing on real IoT devices. Melo et al.~\cite{Melo2017RobustnessTO} targeted only CoAP implementations with no respect to the underlying hardware and Chen et al.~\cite{chen2018ndss} focused on indirect CoAP fuzzing by using the smartphone apps of specific IoT devices. Therefore fuzzing a conjoined system of any embedded hardware and a CoAP implementation seems promising for finding further unknown vulnerabilities. Also Muench et al.~\cite{EURECOM+5417} elaborated on different approaches to evaluate fuzzing and detect corrupted behavior aside from total device failures.
