resturcture and mention structure in intro

--- a/report/sections/01_introduction.tex
+++ b/report/sections/01_introduction.tex
@@ -19,4 +19,6 @@ Finding vulnerabilities in a software systems in conjunction with a hardware sys
 
 Our approach consists of an automatic setup phase of the IoT devices and the fuzzer and the actual fuzzing with logging of all send and received messages and debug output of the systems under test. A CoAP message is crafted using a CoAP message template and informed random field values. Subsequently, the message is send to a IoT border router that routes it to a IoT CoAP server. If needed, a response is transferred back and the request as well as the response are written to log files. Furthermore, all debug outputs of the border router and the CoAP server are saved as well. In order to check if fuzzing was successful and a crash occurred, a request to the standardized CoAP route \textit{/.well-known/core} that returns all available routes is performed and the response is compared to the expected value. If a variation or even no response can be detected, the fuzzing has been successful. The whole fuzzing workflow is automatically repeated until interrupted by the user.
 
-To the best of our knowledge, there is little to no work on CoAP fuzzing on real IoT devices. Melo et al.~\cite{Melo2017RobustnessTO} targeted only CoAP implementations with no respect to the underlying hardware and Chen et al.~\cite{chen2018ndss} focused on indirect CoAP fuzzing by using the smartphone apps of specific IoT devices. Therefore fuzzing a conjoined system of any embedded hardware and a CoAP implementation seems promising for finding further unknown vulnerabilities. Also Muench et al.~\cite{EURECOM+5417} elaborated on different approaches to evaluate fuzzing and detect corrupted behavior aside from total device failures.
+To the best of our knowledge, there is little to no work on CoAP fuzzing on real IoT devices. Melo et al.~\cite{Melo2017RobustnessTO} targeted only CoAP implementations with no respect to the underlying hardware and Chen et al.~\cite{chen2018ndss} focused on indirect CoAP fuzzing by using the smartphone apps of specific IoT devices. Also Muench et al.~\cite{EURECOM+5417} elaborated on different approaches to evaluate fuzzing and detect corrupted behavior aside from total device failures. Our work that focuses on fuzzing of a conjoined system of embedded hardware and a CoAP implementation seems promising for finding further unknown vulnerabilities. It is in addition the first security analysis of the popular Contiki-NG CoAP implementation on an OpenMote hardware.
+
+This paper firstly introduces previous related work in \Autoref{section:related_work} and subsequently elaborates on the background of the CoAP protocol, the used hardware and fuzzing itself in \Autoref{section:background}. Later on in \Autoref{section:approach} our approach and the implementation in \Autoref{section:implementation} are presented and evaluated in \Autoref{section:evaluation}. Finally in \Autoref{section:conclusion} we conclude our results and point out directions for further research.
