--- a/report/sections/04_approach.tex
+++ b/report/sections/04_approach.tex
@@ -8,6 +8,9 @@
 %	\item Modelle einsetzen
 %\end{enumerate}
 
+In this section we first explain the setup we decided to use for fuzzing embedded devices. Furthermore, we explain the CoAP header fields more in-depth and how they are fuzzed.
+
+\subsection{Setup}
 Since we intended to fuzz a CoAP implementation running on a real IoT device, we needed to decide on a setup that enables us to properly send messages with a high throughput and to implement a fuzzer in an easy-to-use high-level language. Having these goals, we decided against fuzzing as an internal attacker from an embedded device in the IoT network, since it has limited resources compared to a desktop computer or laptop. It would also mean that we would need to implement the fuzzer in C, which would take us longer and it would be harder to implement features compared to a scripting language like Python.
 
 We therefore decided to fuzz the IoT device as an external attacker from a laptop that is not part of the IoT network. To do so, we need to be able to communicate with the embedded device via IPv6, which is possible if we set up one OpenMote as a border router and a second one as a CoAP server. Via the border router, we can send messages with IPv6 into the IoT network and therefore send messages to the CoAP server. The CoAP server uses the Contiki-NG CoAP implementation and runs the Contiki-NG CoAP example server on the application layer. Since we only want to fuzz the CoAP implementation, it does not matter what the server on the application layer does with the payload of the CoAP messages. This setup is displayed in \Autoref{figure:fuzzing_setup}.
@@ -21,6 +24,7 @@ We therefore decided to fuzz the IoT device as an external attacker from a lapto
 
 Having decided on the setup, we chose to implement the fuzzer in Python and similarly to Melo et al.~\cite{Melo2017RobustnessTO} we use \scapy to create crafted CoAP packets and send them to the IoT device. Our fuzzing workflow looks as follows. We first send a crafted packet to the CoAP server and await a possible response. After getting the response or getting a timeout (e.g., after sending a NON-message) we then test if the IoT device is still reachable or if it somehow does not respond to messages anymore (e.g., due to a crash or some other malfunction). 
 
+\subsection{Fuzzing CoAP}
 \begin{figure}[h]
 	\centering		
 	\includegraphics[width=0.5\textwidth]{images/coap_message_format}
