--- a/report/main.tex
+++ b/report/main.tex
@@ -64,7 +64,7 @@
 
 \begin{document}
 
-\title{CoAP Fuzzing in Contiki-NG}
+\title{CoAP Fuzzing Contiki-NG}
 \subtitle{Security for the Internet of Things}
 
 \author{Jan Ehmueller and Justin Trautmann \\ \today}
