Refactor background section

--- a/report/sections/03_background.tex
+++ b/report/sections/03_background.tex
@@ -6,21 +6,21 @@
 %	\item Bei Platzmangel könnt ihr diesen Abschnitt auch weglassen und stattdessen bei den entsprechenden Stellen Verweise einfügen
 %\end{enumerate}
 
-This section first introduces the Constrained Application Protocol and its message format. Then the constrained hardware is presented and finally, multiple fuzzing approaches are explained.
+This section first introduces the Constrained Application Protocol and its message format. Then, the constrained hardware is presented and finally, multiple fuzzing approaches are explained.
 
 \subsection{CoAP}
 
-The CoAP protocol defined in RFC7252 a lightweight and RESTful protocoll that can be easily mapped on HTTP~\cite{RFC7252}. Basically, four types of messages can be transferred via UDP. A request can consist of Confirmable (CON) and Non-confirmable (NON) messages. Confirmable messages are expected to be responded by an Acknowledgment (ACK) message. Furthermore, reset messages (RST) can be sent. Non-confirmable messages don't require any response but a response can be sent as a NON message. All of these message types can use the four methods GET, PUT, POST and DELETE and get back defined status codes that are very similar to their corresponding HTTP methods and codes. Furthermore, every message is identified by an ID and a token and can be adjusted by several options. In \Autoref{section:approach} we further describe and evaluate specific properties of the CoAP message fields.
+The CoAP protocol, defined in RFC7252, is a lightweight and RESTful protocol that can be easily mapped on HTTP~\cite{RFC7252}. Basically, four types of messages can be transferred via UDP. A request can consist of Confirmable (CON) and Non-confirmable (NON) messages. Confirmable messages are expected to be responded by an Acknowledgment (ACK) message. Furthermore, reset messages (RST) can be sent. Non-confirmable messages don't require any response but a response can be sent as a NON message. All of these message types can use the four methods GET, PUT, POST and DELETE and get back defined status codes that are very similar to their corresponding HTTP methods and codes. Furthermore, every message is identified by an ID and a token and the message can be adjusted by several options. In \Autoref{section:approach} we further describe and evaluate specific properties of the CoAP message fields.
 
 \subsection{Hardware}
 
-Our target system for the security evaluation was an OpenMote Rev. A1\footnote{\url{www.openmote.com}}, which mainly consists of a CC2538 SoC\footnote{\url{www.ti.com/product/CC2538}} running Contiki-NG~\cite{contiki}. As CoAP server implementation target, the Contiki-NG example implementation\footnote{\url{https://github.com/contiki-ng/contiki-ng/blob/develop/examples/coap/coap-example-server/coap-example-server.c}} was used.
+Our target system for the security evaluation is the OpenMote Rev. A1\footnote{\url{www.openmote.com}}, which mainly consists of a CC2538 SoC\footnote{\url{www.ti.com/product/CC2538}} running Contiki-NG~\cite{contiki}. As CoAP server implementation target, the Contiki-NG example implementation\footnote{\url{https://github.com/contiki-ng/contiki-ng/blob/develop/examples/coap/coap-example-server/coap-example-server.c}} was used. This implementation only provides a running server that uses the CoAP implementation of Contiki-NG, which enables us to fuzz this implementation by sending CoAP messages to the server. We are not interested in what the application does with the information that is extracted from the fuzzed CoAP messages.
 
 \subsection{Fuzzing}
 
-On the attacker side, we used the python packet manipulation framework \scapy\footnote{\url{https://scapy.net}} with its latest CoAP community contribution\footnote{\url{https://github.com/secdev/scapy/blob/master/scapy/contrib/coap.py}}. This enables us to easily assemble CoAP messages, perform requests and log the responses.
+On the side of the attacker, we use the python packet manipulation framework \scapy\footnote{\url{https://scapy.net}} with its latest CoAP community contribution\footnote{\url{https://github.com/secdev/scapy/blob/master/scapy/contrib/coap.py}}. This contribution enables us to easily assemble CoAP messages, perform requests and log the responses.
 
-Fuzzing techniques can be categorized with respect to the approach into random fuzzing, mutational fuzzing and generational fuzzing and with respect to the target system into white-box, gray-box and black-box fuzzing~\cite{neystadtPenTesting}.
-Random fuzzing is the most inefficient technique with respect to the potentially found errors but relatively simple to set up and best suited for systems that are completely unknown (black-box fuzzing). If some details about the used protocol or message format are known, random fuzzing can be adapted to informed fuzzing so that specific fields such as checksums are still valid in order to avoid instant rejection of the messages.
+Fuzzing techniques can be categorized with respect to the approach into random fuzzing, informed random fuzzing, mutational fuzzing and generational fuzzing and with respect to the target system into white-box, gray-box and black-box fuzzing~\cite{neystadtPenTesting}.
+Random fuzzing is the most inefficient technique with respect to the potentially found errors but relatively simple to set up and best suited for systems that are completely unknown, i.e. in a black-box fuzzing setting. If some details about the used protocol or message format are known, random fuzzing can be adapted to informed fuzzing so that specific fields such as checksums are still valid in order to avoid instant rejection of the messages.
 Mutational fuzzing is based on previously captured valid communication with the system under test that is altered in order to get potentially malicious messages. These messages are still very similar to the usual messages and thus they are not immediately rejected by security mechanisms, which causes them to have a high chance to cause damage.
-Lastly generational fuzzing is based on the known structure of the protocol and therefore not suited for black-box fuzzing. Using an empty skeleton of a valid message, fields are randomly or informed randomly filled with values. This makes sure that the message can at least be parsed by the system under test and mechanisms, which are deeper than only the message parser, can be reached and tested.
+Lastly, generational fuzzing is based on the known structure of the protocol and therefore not suited for black-box fuzzing. Using an empty skeleton of a valid message, fields are randomly or informed randomly filled with values. This makes sure that the message can at least be parsed by the system under test and mechanisms, which are deeper than only the message parser, can be reached and tested.
