--- a/report/sections/02_related_work.tex
+++ b/report/sections/02_related_work.tex
@@ -9,11 +9,13 @@
 
 Previous work on CoAP fuzzing is sparse and only focused on implementation fuzzing. Melo et al.~\cite{Melo2017RobustnessTO} searched for publicly available CoAP implementations on common repository services and search engines and selected a few for testing. Their testing system consisted of the boofuzz framework\footnote{\url{https://github.com/jtpereyda/boofuzz}} in order to start, stop and monitor the systems under test and several \scapy based fuzzing engines. They applied random, mutational and generational fuzzing. As expected, generational fuzzing caused way more crashes than informed random and random fuzzing.
 
-Chen et al.~\cite{chen2018ndss} based their work on the observation that the firmware of most commercial IoT devices is not publicly available but often official smartphone apps are used to communicate with the device that can be easily decompiled. Therefore the app can be used to generate sophisticated fuzzed messages even if the protocol information is unknown. The UI and the usage of variables in the app are analyzed and then mutated. This enables the attacker to even fuzz encrypted messages and unknown protocols because only the original inputs and variables at first use are mutated in the app. All the data flow and logic is executed as usual by the app itself.  They put 17 systems under test that also run different protocols than CoAP and found 8 previously unknown failures.
+Chen et al.~\cite{chen2018ndss} based their work on the observation that the firmware of most commercial IoT devices is not publicly available, but often official smartphone apps are used to communicate with the device and those can be easily decompiled. Therefore, the app can be used to generate sophisticated fuzzed messages even if the protocol information is unknown. The user interface and the usage of variables in the app are analyzed and then mutated. This enables the attacker to even fuzz encrypted messages and unknown protocols because only the original inputs and variables are mutated when they are first used in the app. All the data flow and logic is executed as usual by the app itself. Chen et al. put 17 systems under test that also run different protocols than CoAP and found 8 previously unknown failures.
 
-Furthermore Muench et al.~\cite{EURECOM+5417} addressed the problem of error detection while fuzzing embedded devices in general. Usually total system crashes are used as indicators for successful fuzzing. Unfortunately a variety of software failures such as bugs that cause unintended branching and bring the program in an invalid state or buffer overflows that cause memory corruption and potential execution of data don't cause immediate crashes but lead to general malfunction of the system or cause a crash way later in time. These types of failures are especially hard to find on embedded devices because there are usually just a few mechanisms for memory isolation and protection in place. The authors propose several techniques in order to find these failures even on embedded devices. This includes static instrumentation of the source code or the compiled binary itself with additional memory protection mechanisms, running the software on a more sophisticated host and employ higher level security mechanisms or emulate the device fully or partially. Also hardware instrumentation via debug ports is discussed but rarely applicable on commercial products. Furthermore, different heuristics in order to detect memory corruptions are presented.
+Furthermore, Muench et al.~\cite{EURECOM+5417} addressed the problem of error detection while fuzzing embedded devices in general. Usually, total system crashes are used as indicators for successful fuzzing. Unfortunately, a variety of software failures don't cause immediate crashes but lead to general malfunction of the system or cause a crash way later in time. Such failures are, for example, bugs that cause unintended branching and bring the program in an invalid state or buffer overflows that cause memory corruption and potential execution of data.
 
-Tools for automated code instrumentation in order to detect memory corruptions like the AddressSanitizer~\cite{addressSanitizer} can reliably find memory corruptions when using allocators for memory access. Unfortunately Contiki-NGs memory access is mainly based on global static buffers and therefore cannot be tracked with custom allocators.
+These types of failures are especially hard to find on embedded devices because there are usually just a few mechanisms for memory isolation and protection in place. The authors propose several techniques in order to find these failures even on embedded devices. This includes static instrumentation of the source code or the compiled binary itself with additional memory protection mechanisms, running the software on a more sophisticated host and employ higher level security mechanisms or emulating the device either partially or fully. Hardware instrumentation via debug ports is discussed as well but it is rarely applicable on commercial products. Furthermore, they present different heuristics in order to detect memory corruptions.
+
+Tools for automated code instrumentation to detect memory corruptions like the AddressSanitizer~\cite{addressSanitizer} can reliably find memory corruptions when using allocators for memory access. Unfortunately Contiki-NG's memory access is mainly based on global static buffers and therefore cannot be tracked with custom allocators.
 
 Other approaches on fuzzing different layers of the IoT network stack have been made by Böning et al.~\cite{PawelLeo} who targeted the Contiki-NG RPL implementation on fully emulated devices.
 
