conclusion & future work

--- a/report/sections/06_evaluation.tex
+++ b/report/sections/06_evaluation.tex
@@ -5,6 +5,4 @@
 %	\item Evaluierung interessanter Aspekte anhand von Statistiken
 %\end{enumerate}
 
-When performing fully automated fuzzing, processing of one fuzzed message takes around 5.2 seconds. Setup times for the devices can vary due to cached binaries but can reach the magnitude of several minutes. In order to evaluate the fuzzer and the system under test, we performed 20.000 fuzzing requests but did not succeeded in causing a crash or a device malfunction. Nonetheless, we ensured that potential crashes can be found by our setup, by intentionally adding an infinite loop to the CoAP implementation of Contiki-NG as a reaction to a specific message.
-
-\scapy turned out to be easily usable in order to automatically construct CoAP messages. Even though a random fuzz method is also available in \scapy, we decided to fuzz the message fields by ourselves. This enables us to perform informed random and generational fuzzing. Unfortunately, \scapy does not implement further CoAP extension RFCs. Such RFCs are the observation of CoAP resources proposed in RFC7641\footnote{\url{https://tools.ietf.org/html/rfc7641}} and block-wise transfers of larger messages proposed in RFC7959\footnote{\url{https://tools.ietf.org/html/rfc7959}}. Since the system under test does implement these RFCs, this would be a starting point for further research and could be done by either extending the \scapy CoAP contribution or the fuzzer itself. This also leads to upper bounds with respect to the message size, because CoAP messages should not exceed an IPv6 MTU in order to avoid fragmentation.
+When performing fully automated fuzzing, the full fuzzing process for one message takes around 5.2 seconds. The majority of time is consumed by the processing of the message on the constrained device. This time can highly vary and depends heavily on the number given options in the CoAP message. Setup times for the devices can vary due to cached binaries but can reach the magnitude of several minutes. In order to evaluate the fuzzer and the system under test, we performed 60.000 fuzzing requests but did not succeeded in causing a crash or a device malfunction. In order to make sure that potential crashes can be found by our setup, we temporarily added an infinite loop to the CoAP implementation of Contiki-NG. This loop was entered if the token length had a specific length and the hardware watchdog subsequently triggered a restart. All of these expected crashes were properly tracked by our fuzzer.
