--- a/report/sections/04_approach.tex
+++ b/report/sections/04_approach.tex
@@ -32,7 +32,7 @@ Having decided on the setup, we chose to implement the fuzzer in Python and simi
 	\label{figure:coap_header}
 \end{figure}
 
-After determining the message flow we now needed to decide how the craft the CoAP packets. We first read the CoAP RFC and analyzed the CoAP message header in \Autoref{figure:coap_header}. From the fuzzing approaches presented in \Autoref{section:background}, we chose generational fuzzing since we know the protocol being used. Contiki-NG is open source as well, which means that we can employ white-box fuzzing and verify how the header fields are handled and parsed. We further describe how we fuzz each header field:
+After determining the message flow we now needed to decide how the craft the CoAP packets. We first read the CoAP RFC and analyzed the CoAP message header in \Autoref{figure:coap_header}. From the fuzzing approaches presented in \Autoref{section:background}, we chose generational fuzzing since we know the protocol being used. Contiki-NG is open-source as well, which means that we can employ white-box fuzzing and verify how the header fields are handled and parsed. We further describe how we fuzz each header field:
 \begin{enumerate}
 	\item \textbf{Version}: there is currently only one version of CoAP so the version has to be always 1. Contiki-NG has a simple equality check for this field so there is no point in fuzzing this field.
 	\item \textbf{Message Type}: since all four message types are valid we simply randomly fuzz this field.
@@ -53,7 +53,7 @@ The final decision we now have to make is how we want to detect if the IoT devic
 	\item \textbf{Pinging the device}: the simplest approach to test if a device is still reachable in a network is to ping it. This also works with our IoT devices but since an ICMP echo request is handled on the IP layer, it does not reach the CoAP layer and might be answered even though the CoAP engine somehow malfunctioned.
 	\item \textbf{Well-known-core request}: according to the RFC, every CoAP server needs to implement the URI-route ``/.well-known/core``, which describes the resources provided by the server~\cite{RFC7252}. This basically acts as a CoAP ping for us, since it is a route every CoAP server has to provide and to respond to the request the CoAP engine is used. If the content of the response is known, the response after each fuzzing request can be tested for proper structure as well, i.e., that the returned content was not somehow changed by the CoAP engine malfunctioning.
 	\item \textbf{Filter CLI output of CoAP server}: we can filter the standard output of the CoAP server for error messages and the log messages of the hardware watchdog, that restarts the device if it froze (e.g., in an infinite loop). We can then add timestamps to the whole standard output and match those with timestamps of the fuzzing requests.
-	\item \textbf{Add logging to Contiki-NG}: since Contiki-NG is open source, it is possible to simply add more log output to the CoAP implementation to test, for example, memory content of the global buffers used by Contiki-NG.
+	\item \textbf{Add logging to Contiki-NG}: since Contiki-NG is open-source, it is possible to simply add more log output to the CoAP implementation to test, for example, memory content of the global buffers used by Contiki-NG.
 	\item \textbf{JTAG debugging}: it is possible to attach a debugger via JTAG to the OpenMotes and read out all the memory. This also enables testing of the validity of the memory and to detect writing into sections of memory that should not be written to by the CoAP implementation.
 \end{enumerate}
 
