--- a/report/sections/07_conclusion_future_work.tex
+++ b/report/sections/07_conclusion_future_work.tex
@@ -10,7 +10,7 @@
 
 With the goal of building a fully automated fuzzing system for the CoAP implementation of Contiki-NG, we analyzed the implementation and the CoAP protocol itself in order to employ generational fuzzing. With our setup using the Pyhon framework \scapy and the OpenMote hardware, we performed extensive fuzzing but did not succeed to find serious vulnerabilities in the implementation. This should not be seen as a proof of security and treated carefully since fuzzing can never exhaustively test all possible inputs. Nonetheless it is an indicator for a sufficiently secure implementation.
 
-\scapy turned out to be easily usable in order to automatically construct CoAP messages. Even though a random fuzz method is also available in \scapy, we decided to fuzz the message fields by ourselves. This enables us to perform informed random and generational fuzzing. Unfortunately, \scapy does not implement further CoAP extension RFCs. Such RFCs are the observation of CoAP resources proposed in RFC7641\footnote{\url{https://tools.ietf.org/html/rfc7641}} and block-wise transfers of larger messages proposed in RFC7959\footnote{\url{https://tools.ietf.org/html/rfc7959}}. Since the system under test does implement these RFCs, this would be a starting point for further research and could be done by either extending the \scapy CoAP contribution or the fuzzer itself. This also leads to upper bounds with respect to the message size, because CoAP messages should not exceed an IPv6 MTU in order to avoid fragmentation.
+\scapy turned out to be easily usable in order to automatically construct CoAP messages. Even though a random fuzz method is also available in \scapy, we decided to fuzz the message fields by ourselves. This enables us to perform informed random and generational fuzzing. Unfortunately, \scapy does not implement further CoAP extension RFCs. Such RFCs are the observation of CoAP resources proposed in RFC7641\footnote{\url{https://tools.ietf.org/html/rfc7641}} and block-wise transfers of larger messages proposed in RFC7959\footnote{\url{https://tools.ietf.org/html/rfc7959}}. Since the system under test does implement these RFCs, this would be a starting point for further research and could be done by either extending the \scapy CoAP contribution or the fuzzer itself. The lack of block-wise transfer also leads to upper bounds with respect to the message size, because a single CoAP message should not exceed an IPv6 MTU in order to avoid fragmentation.
 
 Furthermore, different improvements of the fuzzer can be considered in future. For example, lots of IoT devices use the payload message format CBOR\footnote{https://tools.ietf.org/html/rfc7049} that can be fuzzed as well. Doing so would enable the fuzzer to not only find vulnerabilities in the protocol parsing and handling but also in the payload processing logic. 
 
