Refactor evaluation and conclusion

--- a/report/sections/07_conclusion_future_work.tex
+++ b/report/sections/07_conclusion_future_work.tex
@@ -8,12 +8,12 @@
 %	\item Vorschläge für zukünftige Forschungsrichtungen
 %\end{enumerate}
 
-With the goal of building a fully automated fuzzing system for the CoAP implementation of Contiki-NG, we analyzed the implementation and the CoAP protocol itself in order to employ generational fuzzing. With our setup using the Pyhon framework \scapy and the OpenMote hardware, we performed extensive fuzzing but did not succeed to find serious vulnerabilities in the implementation. This should not be seen as a proof of security and treated carefully since fuzzing can never exhaustively test all possible inputs. Nonetheless it is an indicator for a sufficiently secure implementation.
+With the goal of building a fully automated fuzzing system for the CoAP implementation of Contiki-NG, we analyzed the implementation and the CoAP protocol itself in order to employ generational fuzzing. With our setup using the Python framework \scapy and the OpenMote hardware, we performed extensive fuzzing but did not succeed in finding serious vulnerabilities in the implementation. This should not be seen as a proof of security and treated carefully since fuzzing can never exhaustively test all possible inputs. Nonetheless, it is an indicator for a sufficiently secure implementation.
 
-\scapy turned out to be easily usable in order to automatically construct CoAP messages. Even though a random fuzz method is also available in \scapy, we decided to fuzz the message fields by ourselves. This enables us to perform informed random and generational fuzzing. Unfortunately, \scapy does not implement further CoAP extension RFCs. Such RFCs are the observation of CoAP resources proposed in RFC7641\footnote{\url{https://tools.ietf.org/html/rfc7641}} and block-wise transfers of larger messages proposed in RFC7959\footnote{\url{https://tools.ietf.org/html/rfc7959}}. Since the system under test does implement these RFCs, this would be a starting point for further research and could be done by either extending the \scapy CoAP contribution or the fuzzer itself. This also leads to upper bounds with respect to the message size, because CoAP messages should not exceed an IPv6 MTU in order to avoid fragmentation.
+\scapy turned out to be easily usable in order to automatically construct CoAP messages. Even though a random fuzz method is also available in \scapy, we decided to fuzz the message fields ourselves. This enables us to perform informed random and generational fuzzing. Unfortunately, \scapy does not implement further CoAP extension RFCs. Such RFCs are the observation of CoAP resources proposed in RFC7641\footnote{\url{https://tools.ietf.org/html/rfc7641}} and block-wise transfers of larger messages proposed in RFC7959\footnote{\url{https://tools.ietf.org/html/rfc7959}}. Since the system under test does implement these RFCs, this would be a starting point for further research and could be done by either extending the \scapy CoAP contribution or the fuzzer itself. This also leads to upper bounds with respect to the message size, because CoAP messages should not exceed an IPv6 MTU in order to avoid fragmentation.
 
-Furthermore, different improvements of the fuzzer can be considered in future. For example, lots of IoT devices use the payload message format CBOR\footnote{https://tools.ietf.org/html/rfc7049} that can be fuzzed as well. Doing so would enable the fuzzer to not only find vulnerabilities in the protocol parsing and handling but also in the payload processing logic. 
+Furthermore, different improvements of the fuzzer can be considered in the future. For example, lots of IoT devices use the payload message format CBOR\footnote{https://tools.ietf.org/html/rfc7049} that can be fuzzed as well. This would enable the fuzzer to not only find vulnerabilities in the protocol parsing and handling, but also in the payload processing logic. 
 
-Also the logging and replay could be improved by providing a feature for selective display of particular messages or errors and more usable replay. In case of a detected error, automatic replay could be considered.
+The logging and replay could be improved as well by providing a feature for selective display of particular messages or errors and a more usable replay of messages. In case of a detected error, automatic replay could be considered.
 
-Since the error detection currently relies on the pure observation of the devices output, some errors might have happened but could not be detected by our system. Such errors include any kind of memory corruption that can potentially lead to malfunctioning in the future but cannot be detected from the outside at the moment of occurrence. In order to detect them immediately, the implementation or the device has to be additionally instrumented, which makes the fuzzer no longer generic to all devices and implementations but could be considered too.
+Since the error detection currently relies on the pure observation of the device output, some errors might have happened, but could not be detected by our system. Such errors include any kind of memory corruption that can potentially lead to malfunctioning in the future, but cannot be detected from the outside at the moment of occurrence. In order to detect them immediately, the implementation or the device has to be additionally instrumented, which makes the fuzzer no longer generic to all devices and implementations but could also be considered.
